--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 database=mysql
 #spring.datasource.url=jdbc:mysql://localhost/itec4860db
-spring.datasource.url=jdbc:mysql://google/itec4860db?cloudSqlInstance=tacksoi123:us-central1:itec4860db&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.url=jdbc:mysql://google/itec4860db?cloudSqlInstance=stevenbeteag-4860:us-central1:itec4860db&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=nKbyeOOcIwcP1cim
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #Connection name = itec4860:us-central1:itec4860db
