--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,14 @@
                 <artifactId>appengine-maven-plugin</artifactId>
                 <version>1.2.1</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
 
         </plugins>
 
