--- a/src/main/resources/LOCAL.application.properties
+++ b/src/main/resources/LOCAL.application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/itec4860db
+spring.datasource.url=jdbc:mysql://localhost:3306/inventory
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=taco
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 
